--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    majority have suffered alteration in some form, by injected humour, or randomized words which don't
                     look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
@@ -42,23 +42,73 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-content">
-                <h3 class="teams-title"><span class="quick-list text-light-gray">Quick list</span> <span>of our</span> <span class="text-features">Features</span></h3>
+                <h3 class="teams-title"><span class="quick-list text-light-gray">Quick list</span> <span>of our</span>
+                    <span class="text-features">Features</span>
+                </h3>
                 <p class="text-light-gray">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised words which don't look even
+                    alteration in some form, by injected humour, or randomized words which don't look even
                 </p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
         <!-- features section -->
         <section class="features">
-
+            <div class="features-content">
+                <h3 class="section-title">
+                    Features you will <br> love & enjoy
+                </h3>
+                <p class="text-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomized words which don't look even
+                </p>
+                <div class="card">
+                    <h4>
+                        Desktop & Mobile Version
+                    </h4>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>
+                        Desktop & Mobile Version
+                    </h4>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>
+                        Desktop & Mobile Version
+                    </h4>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........
+                    </p>
+                </div>
+                <div class="card">
+                    <h4>
+                        Desktop & Mobile Version
+                    </h4>
+                    <p class="text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........
+                    </p>
+                </div>
+            </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
         <!-- facts section -->
         <section class="facts">
             <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.
             </p>
             <div class="facts-card-container">
                 <!-- .card*4>img+h2.card-stats+p.card-title.text-light-gray -->
@@ -88,7 +138,8 @@
         <section class="sponsors">
             <h3 class="section-title">Our Sponsors</h3>
             <p class="text-light-gray">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.
             </p>
             <div class="sponsors-img-container">
                 <img src="images/sponsors/spotify.png" alt="">
